# research

./: .gitmodules  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  docs.yml  lean4.yml  release.yml
atlas-embeddings/: .clippy.toml  .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE.md  rustfmt.toml
atlas-embeddings/.github/: copilot-instructions.md
atlas-embeddings/.github/workflows/: ci.yml  docs.yml  lean4.yml  release.yml
atlas-embeddings/benches/: atlas_construction.rs  cartan_computation.rs  exact_arithmetic.rs
atlas-embeddings/docs/: DOCUMENTATION.md  PAPER_ARCHITECTURE.md  katex-header.html
atlas-embeddings/examples/: export_golden_seed_vector.rs  generate_atlas_graph.rs  generate_depth2_fractal.rs  generate_dynkin_diagrams.rs  generate_golden_seed_fractal.rs  generate_golden_seed_fractal_3d.rs  visualize_e8_projections.rs
atlas-embeddings/lean4/: .gitignore  AtlasEmbeddings.lean  GAP_ANALYSIS.md  LAST_MILE.md  Main.lean  PLAN.md  README.md  lake-manifest.json  lakefile.lean
atlas-embeddings/lean4/AtlasEmbeddings/: ActionFunctional.lean  Arithmetic.lean  Atlas.lean  CategoricalFunctors.lean  Completeness.lean  E8.lean  Embedding.lean  Groups.lean
atlas-embeddings/python/: invariant_extractor.py  test_invariant_extractor.py
atlas-embeddings/src/: invariant.rs  lib.rs  spectral.rs
atlas-embeddings/src/arithmetic/: matrix.rs  mod.rs
atlas-embeddings/src/atlas/: mod.rs
atlas-embeddings/src/cartan/: mod.rs
atlas-embeddings/src/categorical/: mod.rs
atlas-embeddings/src/e8/: mod.rs
atlas-embeddings/src/embedding/: mod.rs  weyl_action.rs
atlas-embeddings/src/foundations/: action.rs  categories.rs  mod.rs  primitives.rs  resgraph.rs  resonance.rs
atlas-embeddings/src/groups/: mod.rs
atlas-embeddings/src/visualization/: README.md  atlas_graph.rs  dynkin.rs  e8_roots.rs  embedding.rs  export.rs  fractal.rs  mod.rs
atlas-embeddings/src/weyl/: mod.rs
atlas-embeddings/tests/: action_functional_uniqueness.rs  atlas_construction.rs  atlas_e8_embedding.rs  atlas_initiality.rs  categorical_completeness.rs  categorical_operations.rs  e6_construction.rs  e7_construction.rs  e8_embedding.rs  embedding_weyl_orbit.rs  f4_construction.rs  f4_universal_property.rs  g2_construction.rs  g2_universal_property.rs  inclusion_chain.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  resgraph_category_axioms.rs  spectral_properties.rs  visualization_test.rs  weyl_basic.rs
